WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246878
Scrolling by pressing space bar has regressed in trunk, is choppy (not 120Hz)
https://bugs.webkit.org/show_bug.cgi?id=246878
Summary
Scrolling by pressing space bar has regressed in trunk, is choppy (not 120Hz)
Richard Robinson
Reported
2022-10-21 12:44:29 PDT
rdar://101052130
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2022-10-21 12:49:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5541
EWS
Comment 2
2022-11-02 21:12:44 PDT
Committed
256266@main
(cb5925ef6a3e): <
https://commits.webkit.org/256266@main
> Reviewed commits have been landed. Closing PR #5541 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug