Cherry-pick cb5925ef6a3e. rdar://problem/101052130

Scrolling by pressing space bar has regressed in trunk, is choppy (not 120Hz)
    https://bugs.webkit.org/show_bug.cgi?id=246878
    rdar://101052130

    Reviewed by Simon Fraser.

    Moves keyboard smooth scrolling onto the scrolling thread instead of the main thread.

    A new `ScrollAnimation` is created to facilitate this, `ScrollAnimationKeyboard`. Most
    of the changes are to allow the state to propogate through the various classes and
    the scrolling tree.

    Since keyboard scrolling is now on a different thread, some tests had to be modified to
    enable the `AsyncOverflowScrollingEnabled` and `AsyncFrameScrollingEnabled` settings.

    * Source/WebCore/Sources.txt:
    * Source/WebCore/WebCore.xcodeproj/project.pbxproj:
    * Source/WebCore/page/FrameView.cpp:
    (WebCore::FrameView::requestStartKeyboardAnimation):
    (WebCore::FrameView::requestFinishKeyboardAnimation):
    * Source/WebCore/page/FrameView.h:
    * Source/WebCore/page/scrolling/AsyncScrollingCoordinator.cpp:
    (WebCore::AsyncScrollingCoordinator::requestStartKeyboardAnimation):
    (WebCore::AsyncScrollingCoordinator::requestFinishKeyboardAnimation):
    * Source/WebCore/page/scrolling/AsyncScrollingCoordinator.h:
    * Source/WebCore/page/scrolling/ScrollingCoordinator.h:
    (WebCore::ScrollingCoordinator::requestStartKeyboardAnimation):
    (WebCore::ScrollingCoordinator::requestFinishKeyboardAnimation):
    * Source/WebCore/page/scrolling/ScrollingStateNode.h:
    * Source/WebCore/page/scrolling/ScrollingStateScrollingNode.cpp:
    (WebCore::ScrollingStateScrollingNode::ScrollingStateScrollingNode):
    (WebCore::ScrollingStateScrollingNode::setKeyboardScrollData):
    (WebCore::ScrollingStateScrollingNode::setKeyboardScrollEndData):
    * Source/WebCore/page/scrolling/ScrollingStateScrollingNode.h:
    (WebCore::ScrollingStateScrollingNode::keyboardScrollData const):
    (WebCore::ScrollingStateScrollingNode::keyboardScrollEndData const):
    * Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.cpp:
    (WebCore::ScrollingTreeScrollingNode::commitStateAfterChildren):
    (WebCore::ScrollingTreeScrollingNode::handleKeyboardScrollRequest):
    (WebCore::ScrollingTreeScrollingNode::handleKeyboardScrollEndRequest):
    * Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.h:
    * Source/WebCore/page/scrolling/ScrollingTreeScrollingNodeDelegate.h:
    (WebCore::ScrollingTreeScrollingNodeDelegate::handleKeyboardScrollRequest):
    (WebCore::ScrollingTreeScrollingNodeDelegate::handleKeyboardScrollEndRequest):
    * Source/WebCore/page/scrolling/mac/ScrollingTreeScrollingNodeDelegateMac.h:
    * Source/WebCore/page/scrolling/mac/ScrollingTreeScrollingNodeDelegateMac.mm:
    (WebCore::ScrollingTreeScrollingNodeDelegateMac::handleKeyboardScrollRequest):
    (WebCore::ScrollingTreeScrollingNodeDelegateMac::handleKeyboardScrollEndRequest):
    * Source/WebCore/platform/KeyboardScrollingAnimator.cpp:
    (WebCore::KeyboardScrollingAnimator::KeyboardScrollingAnimator):
    (WebCore::KeyboardScrollingAnimator::beginKeyboardScrollGesture):
    (WebCore::KeyboardScrollingAnimator::handleKeyUpEvent):
    (WebCore::KeyboardScrollingAnimator::stopScrollingImmediately):
    (WebCore::perpendicularAbsoluteUnitVector): Deleted.
    (WebCore::KeyboardScrollingAnimator::updateKeyboardScrollPosition): Deleted.
    (WebCore::farthestPointInDirection): Deleted.
    (WebCore::KeyboardScrollingAnimator::stopKeyboardScrollAnimation): Deleted.
    * Source/WebCore/platform/KeyboardScrollingAnimator.h:
    * Source/WebCore/platform/ScrollAnimation.cpp:
    (WebCore::operator<<):
    * Source/WebCore/platform/ScrollAnimation.h:
    * Source/WebCore/platform/ScrollAnimationKeyboard.cpp: Added.
    (WebCore::perpendicularAbsoluteUnitVector):
    (WebCore::boxSideForDirection):
    (WebCore::farthestPointInDirection):
    (WebCore::ScrollAnimationKeyboard::scrollableDirectionsFromPosition):
    (WebCore::ScrollAnimationKeyboard::ScrollAnimationKeyboard):
    (WebCore::ScrollAnimationKeyboard::retargetActiveAnimation):
    (WebCore::ScrollAnimationKeyboard::serviceAnimation):
    (WebCore::ScrollAnimationKeyboard::startKeyboardScroll):
    (WebCore::ScrollAnimationKeyboard::stopKeyboardScrollAnimation):
    (WebCore::ScrollAnimationKeyboard::finishKeyboardScroll):
    (WebCore::ScrollAnimationKeyboard::animateScroll):
    (WebCore::ScrollAnimationKeyboard::debugDescription const):
    * Source/WebCore/platform/ScrollAnimationKeyboard.h: Copied from Source/WebCore/platform/ScrollAnimation.cpp.
    * Source/WebCore/platform/ScrollAnimator.cpp:
    (WebCore::ScrollAnimator::ScrollAnimator):
    * Source/WebCore/platform/ScrollableArea.cpp:
    (WebCore::ScrollableArea::beginKeyboardScroll):
    (WebCore::ScrollableArea::endKeyboardScroll):
    * Source/WebCore/platform/ScrollableArea.h:
    (WebCore::ScrollableArea::requestStartKeyboardAnimation):
    (WebCore::ScrollableArea::requestFinishKeyboardAnimation):
    * Source/WebCore/platform/ScrollingEffectsController.cpp:
    (WebCore::ScrollingEffectsController::animationCallback):
    (WebCore::ScrollingEffectsController::startKeyboardScroll):
    (WebCore::ScrollingEffectsController::finishKeyboardScroll):
    (WebCore::ScrollingEffectsController::updateKeyboardScrollingAnimatingState):
    (WebCore::ScrollingEffectsController::scrollAnimationWillStart):
    * Source/WebCore/platform/ScrollingEffectsController.h:
    (WebCore::ScrollingEffectsControllerClient::updateKeyboardScrollPosition): Deleted.
    * Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
    (WebCore::RenderLayerScrollableArea::requestStartKeyboardAnimation):
    (WebCore::RenderLayerScrollableArea::requestFinishKeyboardAnimation):
    * Source/WebCore/rendering/RenderLayerScrollableArea.h:

    Canonical link: https://commits.webkit.org/256266@main

Canonical link: https://commits.webkit.org/256138.53@safari-7615.1.12-branch