Source/WebCore/page/scrolling/ScrollingStateScrollingNode.h
@@ -75,6 +75,9 @@ public:
     bool hasSynchronousScrollingReasons() const { return !m_synchronousScrollingReasons.isEmpty(); }
 #endif
 
+    const RequestedKeyboardScrollData& keyboardScrollData() const { return m_keyboardScrollData; }
+    WEBCORE_EXPORT void setKeyboardScrollData(RequestedKeyboardScrollData&&);
+
     const RequestedScrollData& requestedScrollData() const { return m_requestedScrollData; }
     WEBCORE_EXPORT void setRequestedScrollData(const RequestedScrollData&);
 
@@ -132,6 +135,7 @@ private:
 
     ScrollableAreaParameters m_scrollableAreaParameters;
     RequestedScrollData m_requestedScrollData;
+    RequestedKeyboardScrollData m_keyboardScrollData;
 #if ENABLE(SCROLLING_THREAD)
     OptionSet<SynchronousScrollingReason> m_synchronousScrollingReasons;
 #endif
