Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.h
@@ -59,6 +59,8 @@ class WEBCORE_EXPORT ScrollingTreeScrollingNode : public ScrollingTreeNode {
 public:
     virtual ~ScrollingTreeScrollingNode();
 
+    void handleKeyboardScrollRequest(const RequestedKeyboardScrollData&);
+
     void commitStateBeforeChildren(const ScrollingStateNode&) override;
     void commitStateAfterChildren(const ScrollingStateNode&) override;
     void didCompleteCommitForNode() final;
