Source/WebCore/platform/KeyboardScrollingAnimator.cpp
@@ -29,22 +29,21 @@
 #include "EventNames.h"
 #include "FrameView.h"
 #include "PlatformKeyboardEvent.h"
+#include "ScrollAnimator.h"
 #include "ScrollTypes.h"
-#include "ScrollableArea.h"
 #include <wtf/SortedArrayMap.h>
 
 namespace WebCore {
 
-KeyboardScrollingAnimator::KeyboardScrollingAnimator(ScrollAnimator& scrollAnimator, ScrollingEffectsController& scrollController)
-    : m_scrollAnimator(scrollAnimator)
-    , m_scrollController(scrollController)
+KeyboardScrollingAnimator::KeyboardScrollingAnimator(ScrollableArea& scrollableArea)
+    : m_scrollableArea(scrollableArea)
 {
 }
 
 RectEdges<bool> KeyboardScrollingAnimator::scrollableDirectionsFromPosition(FloatPoint position) const
 {
-    auto minimumScrollPosition = m_scrollAnimator.scrollableArea().minimumScrollPosition();
-    auto maximumScrollPosition = m_scrollAnimator.scrollableArea().maximumScrollPosition();
+    auto minimumScrollPosition = m_scrollableArea.minimumScrollPosition();
+    auto maximumScrollPosition = m_scrollableArea.maximumScrollPosition();
 
     RectEdges<bool> edges;
 
@@ -70,20 +69,6 @@ static BoxSide boxSideForDirection(ScrollDirection direction)
     }
     ASSERT_NOT_REACHED();
     return BoxSide::Top;
-}
-
-static FloatSize perpendicularAbsoluteUnitVector(ScrollDirection direction)
-{
-    switch (direction) {
-    case ScrollDirection::ScrollUp:
-    case ScrollDirection::ScrollDown:
-        return { 1, 0 };
-    case ScrollDirection::ScrollLeft:
-    case ScrollDirection::ScrollRight:
-        return { 0, 1 };
-    }
-    ASSERT_NOT_REACHED();
-    return { };
 }
 
 const std::optional<KeyboardScrollingKey> keyboardScrollingKeyForKeyboardEvent(const KeyboardEvent& event)
@@ -174,66 +159,9 @@ const std::optional<ScrollGranularity> scrollGranularityForKeyboardEvent(const K
     return granularity;
 }
 
-void KeyboardScrollingAnimator::updateKeyboardScrollPosition(MonotonicTime currentTime)
-{
-    auto force = FloatSize { };
-    auto axesToApplySpring = FloatSize { 1, 1 };
-    KeyboardScrollParameters params = KeyboardScrollParameters::parameters();
-
-    if (m_currentKeyboardScroll) {
-        auto scrollableDirections = scrollableDirectionsFromPosition(m_scrollAnimator.currentPosition());
-        auto direction = m_currentKeyboardScroll->direction;
-
-        if (scrollableDirections.at(boxSideForDirection(direction))) {
-            // Apply the scrolling force. Only apply the spring in the perpendicular axis,
-            // otherwise it drags against the direction of motion.
-            axesToApplySpring = perpendicularAbsoluteUnitVector(direction);
-            force = m_currentKeyboardScroll->force;
-        } else {
-            // The scroll view cannot scroll in this direction, and is rubber-banding.
-            // Apply a constant and significant force; otherwise, the force for a
-            // single-line increment is not strong enough to rubber-band perceptibly.
-            force = unitVectorForScrollDirection(direction).scaled(params.rubberBandForce);
-        }
-
-        if (fabs(m_velocity.width()) >= fabs(m_currentKeyboardScroll->maximumVelocity.width()))
-            force.setWidth(0);
-
-        if (fabs(m_velocity.height()) >= fabs(m_currentKeyboardScroll->maximumVelocity.height()))
-            force.setHeight(0);
-    }
-
-    ScrollPosition idealPosition = m_scrollAnimator.scrollableArea().constrainedScrollPosition(IntPoint(m_currentKeyboardScroll ? m_scrollAnimator.currentPosition() : m_idealPosition));
-    FloatSize displacement = m_scrollAnimator.currentPosition() - idealPosition;
-
-    auto springForce = -displacement.scaled(params.springStiffness) - m_velocity.scaled(params.springDamping);
-    force += springForce * axesToApplySpring;
-
-    float frameDuration = (currentTime - m_timeAtLastFrame).value();
-    m_timeAtLastFrame = currentTime;
-
-    FloatSize acceleration = force.scaled(1. / params.springMass);
-    m_velocity += acceleration.scaled(frameDuration);
-    FloatPoint newPosition = m_scrollAnimator.currentPosition() + m_velocity.scaled(frameDuration);
-
-    m_scrollAnimator.scrollToPositionWithoutAnimation(newPosition);
-
-    // Stop the spring if it reaches the ideal position.
-    FloatSize newDisplacement = newPosition - idealPosition;
-    if (axesToApplySpring.width() && displacement.width() * newDisplacement.width() < 0)
-        m_velocity.setWidth(0);
-    if (axesToApplySpring.height() && displacement.height() * newDisplacement.height() < 0)
-        m_velocity.setHeight(0);
-
-    if (!m_scrollTriggeringKeyIsPressed && m_velocity.diagonalLengthSquared() < 1) {
-        m_scrollController.didStopKeyboardScrolling();
-        m_velocity = { };
-    }
-}
-
 float KeyboardScrollingAnimator::scrollDistance(ScrollDirection direction, ScrollGranularity granularity) const
 {
-    auto scrollbar = m_scrollAnimator.scrollableArea().scrollbarForDirection(direction);
+    auto scrollbar = m_scrollableArea.scrollbarForDirection(direction);
     if (!scrollbar)
         return false;
 
@@ -255,7 +183,7 @@ float KeyboardScrollingAnimator::scrollDistance(ScrollDirection direction, Scrol
 
     auto axis = axisFromDirection(direction);
     if (granularity == ScrollGranularity::Page && axis == ScrollEventAxis::Vertical)
-        step = m_scrollAnimator.scrollableArea().adjustVerticalPageScrollStepForFixedContent(step);
+        step = m_scrollableArea.adjustVerticalPageScrollStepForFixedContent(step);
 
     return step;
 }
@@ -284,9 +212,7 @@ bool KeyboardScrollingAnimator::beginKeyboardScrollGesture(ScrollDirection direc
     if (!scroll)
         return false;
 
-    m_currentKeyboardScroll = scroll;
-
-    auto scrollableDirections = scrollableDirectionsFromPosition(m_scrollAnimator.currentPosition());
+    auto scrollableDirections = scrollableDirectionsFromPosition(m_scrollableArea.scrollAnimator().currentPosition());
     if (!scrollableDirections.at(boxSideForDirection(direction))) {
         stopScrollingImmediately();
         return false;
@@ -296,63 +222,17 @@ bool KeyboardScrollingAnimator::beginKeyboardScrollGesture(ScrollDirection direc
         return true;
 
     if (granularity == ScrollGranularity::Document) {
-        m_velocity = { };
-        stopKeyboardScrollAnimation();
-        auto newPosition = IntPoint(m_scrollAnimator.currentPosition() + m_currentKeyboardScroll->offset);
-        m_scrollAnimator.scrollToPositionWithAnimation(newPosition);
+        m_scrollableArea.endKeyboardScroll(false);
+        auto newPosition = IntPoint(m_scrollableArea.scrollAnimator().currentPosition() + scroll->offset);
+        m_scrollableArea.scrollAnimator().scrollToPositionWithAnimation(newPosition);
         return true;
     }
 
-    m_timeAtLastFrame = MonotonicTime::now();
     m_scrollTriggeringKeyIsPressed = true;
 
-    m_idealPositionForMinimumTravel = m_scrollAnimator.currentPosition() + m_currentKeyboardScroll->offset;
-    m_scrollController.willBeginKeyboardScrolling();
+    m_scrollableArea.beginKeyboardScroll(*scroll);
 
     return true;
-}
-
-static ScrollPosition farthestPointInDirection(FloatPoint a, FloatPoint b, ScrollDirection direction)
-{
-    switch (direction) {
-    case ScrollDirection::ScrollUp:
-        return ScrollPosition(a.x(), std::min(a.y(), b.y()));
-    case ScrollDirection::ScrollDown:
-        return ScrollPosition(a.x(), std::max(a.y(), b.y()));
-    case ScrollDirection::ScrollLeft:
-        return ScrollPosition(std::min(a.x(), b.x()), a.y());
-    case ScrollDirection::ScrollRight:
-        return ScrollPosition(std::max(a.x(), b.x()), a.y());
-    }
-
-    ASSERT_NOT_REACHED();
-    return { };
-}
-
-void KeyboardScrollingAnimator::stopKeyboardScrollAnimation()
-{
-    if (!m_currentKeyboardScroll)
-        return;
-
-    auto params = KeyboardScrollParameters::parameters();
-
-    // Determine the settling position of the spring, conserving the system's current energy.
-    // Kinetic = elastic potential
-    // 1/2 * m * v^2 = 1/2 * k * x^2
-    // x = sqrt(v^2 * m / k)
-    auto displacementMagnitudeSquared = (m_velocity * m_velocity).scaled(params.springMass / params.springStiffness);
-    FloatSize displacement = {
-        std::copysign(sqrt(displacementMagnitudeSquared.width()), m_velocity.width()),
-        std::copysign(sqrt(displacementMagnitudeSquared.height()), m_velocity.height())
-    };
-
-    // If the spring would settle before the minimum travel distance
-    // for an instantaneous tap, move the settling position of the spring
-    // out to that point.
-    ScrollPosition farthestPoint = farthestPointInDirection(m_scrollAnimator.currentPosition() + displacement, m_idealPositionForMinimumTravel, m_currentKeyboardScroll->direction);
-    m_idealPosition = m_scrollAnimator.scrollableArea().constrainedScrollPosition(farthestPoint);
-
-    m_currentKeyboardScroll = std::nullopt;
 }
 
 void KeyboardScrollingAnimator::handleKeyUpEvent()
@@ -360,15 +240,15 @@ void KeyboardScrollingAnimator::handleKeyUpEvent()
     if (!m_scrollTriggeringKeyIsPressed)
         return;
 
-    stopKeyboardScrollAnimation();
     m_scrollTriggeringKeyIsPressed = false;
+
+    m_scrollableArea.endKeyboardScroll(false);
 }
 
 void KeyboardScrollingAnimator::stopScrollingImmediately()
 {
     m_scrollTriggeringKeyIsPressed = false;
-    m_scrollController.didStopKeyboardScrolling();
-    m_velocity = { };
+    m_scrollableArea.endKeyboardScroll(true);
 }
 
 } // namespace WebCore
